--- a/base/snippets/sequence.scss
+++ b/base/snippets/sequence.scss
@@ -6,6 +6,7 @@
 @mixin sequence($sequence-height-s: false,
                 $sequence-height-m: false,
                 $sequence-height-l: false,
+                $sequence-height-xl: false,
                 $sequence-max-width-s: 350px,
                 $sequence-color: transparent,
                 $space-bottom: 10px,
@@ -39,29 +40,26 @@
             max-height: $sequence-height-s;         //maximum height, same as above
 
             @if $scale-mobile != false {
-                @include at-breakpoint($small-cols 510 / 16 * 1em) {
+                @include at-breakpoint($small-cols 480 / 16 * 1em) {
                     @include transition(height 0.2s ease, max-height 0.2s ease);  //animate height at each breakpoint change
-                    max-height: 510/520 * $sequence-height-s;
+                    max-height: 480/490 * $sequence-height-s;
                 }
-                @include at-breakpoint($small-cols 500 / 16 * 1em) { max-height: 500/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 490 / 16 * 1em) { max-height: 490/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 480 / 16 * 1em) { max-height: 480/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 470 / 16 * 1em) { max-height: 470/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 460 / 16 * 1em) { max-height: 460/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 450 / 16 * 1em) { max-height: 450/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 440 / 16 * 1em) { max-height: 440/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 430 / 16 * 1em) { max-height: 430/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 420 / 16 * 1em) { max-height: 420/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 410 / 16 * 1em) { max-height: 410/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 400 / 16 * 1em) { max-height: 400/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 390 / 16 * 1em) { max-height: 390/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 380 / 16 * 1em) { max-height: 380/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 370 / 16 * 1em) { max-height: 370/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 360 / 16 * 1em) { max-height: 360/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 350 / 16 * 1em) { max-height: 350/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 340 / 16 * 1em) { max-height: 340/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 330 / 16 * 1em) { max-height: 330/520 * $sequence-height-s; }
-                @include at-breakpoint($small-cols 320 / 16 * 1em) { max-height: 320/520 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 470 / 16 * 1em) { max-height: 470/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 460 / 16 * 1em) { max-height: 460/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 450 / 16 * 1em) { max-height: 450/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 440 / 16 * 1em) { max-height: 440/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 430 / 16 * 1em) { max-height: 430/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 420 / 16 * 1em) { max-height: 420/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 410 / 16 * 1em) { max-height: 410/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 400 / 16 * 1em) { max-height: 400/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 390 / 16 * 1em) { max-height: 390/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 380 / 16 * 1em) { max-height: 380/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 370 / 16 * 1em) { max-height: 370/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 360 / 16 * 1em) { max-height: 360/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 350 / 16 * 1em) { max-height: 350/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 340 / 16 * 1em) { max-height: 340/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 330 / 16 * 1em) { max-height: 330/490 * $sequence-height-s; }
+                @include at-breakpoint($small-cols 320 / 16 * 1em) { max-height: 320/490 * $sequence-height-s; }
             }
         }
         //check that the medium height is given, and isn't the same as the small height
@@ -80,6 +78,20 @@
                 @include at-breakpoint($above-large) {
                     height: $sequence-height-l;         //large size specs
                     max-height: $sequence-height-l;
+                }
+            }
+        }
+        //check that the xlarge height is given, and isn't the same as the large height
+        @if $sequence-height-xl != false and $sequence-height-xl != $sequence-height-l {
+            //in cases where the large height isn't given check that the xlarge height isn't the same as the medium or small height
+            @if $sequence-height-l == false and $sequence-height-xl == $sequence-height-m {
+                //do nothing
+            } @else if $sequence-height-m == false and $sequence-height-xl == $sequence-height-s {
+                //do nothing
+            } @else {
+                @include at-breakpoint($above-xlarge) {
+                    height: $sequence-height-xl;         //xlarge size specs
+                    max-height: $sequence-height-xl;
                 }
             }
         }
